feat: add database + alembic + pre-commit + init hg
